ajout de la fonction soustraction + maj readme

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,7 +2,7 @@ name: Python Tests
 on: [push]
 jobs:
   test:
-    runs-on: ubuntu-latest  # Utilisation de l'image Ubuntu
+    runs-on: ubuntu-latest
     steps:
     
     - name: Setup Python
