--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -4,6 +4,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+
+    - name: Checkout du code
+      uses: actions/checkout@v2  # Action pour vérifier le code
     
     - name: Setup Python
       uses: actions/setup-python@v2
@@ -11,4 +14,4 @@ jobs:
         python-version: 3.10.10
 
     - name: Exécuter les tests
-      run: python -m unittest discover -s . -p '../SimpleMath.py'
+      run: python -m unittest ../SimpleMath.py
