--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
 
     - name: Checkout du code
-      uses: actions/checkout@v2  # Action pour vérifier le code
+      uses: actions/checkout@v2
     
     - name: Setup Python
       uses: actions/setup-python@v2
@@ -14,4 +14,4 @@ jobs:
         python-version: 3.10.10
 
     - name: Exécuter les tests
-      run: python -m unittest ../SimpleMath.py
+      run: python -m unittest ../SimpleMath
