--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -14,4 +14,4 @@ jobs:
         python-version: 3.10.10
 
     - name: Exécuter les tests
-      run: python -m unittest ../SimpleMath
+      run: python -m unittest SimpleMath.py
