--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -12,6 +12,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.10.10
+    
+    - name: Dependancies Install
+      run: pip install pylint
 
+    - name: Lint avec pylint
+      run: pylint SimpleMath.py
+      
     - name: Exécuter les tests
       run: python -m unittest SimpleMath.py
