Maj de la pipeline pour que pylint soit bloquant que en dessous d'un score de 4

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -18,6 +18,6 @@ jobs:
 
     - name: Lint avec pylint
       run: pylint SimpleMath.py
-      
+
     - name: Exécuter les tests
-      run: python -m unittest SimpleMath.py
+      run: python -m unittest --fail-under=4 SimpleMath.py
